force-app/main/default/objects/Notification__c/Notification__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the template of object to which we need to send email</description>
    <label>Notification</label>
    <nameField>
        <displayFormat>NT-{0000000}</displayFormat>
        <label>Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>