force-app/main/default/objects/Notification__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Field to store email address to whom email will be send</description>
    <label>Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>