force-app/main/default/objects/Notification__c/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <description>Field to store email template name</description>
    <label>Email Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>