force-app/main/default/objects/Notification__c/fields/Notification_Status__c.field-meta.xml
<CustomField>
    <fullName>Notification_Status__c</fullName>
    <description>field to store status of email notification</description>
    <label>Notification Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>