force-app/main/default/objects/Notification__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Field to store Id of record to which email should go</description>
    <label>RecordId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>