force-app/main/default/objects/Notification__c/fields/Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Date__c</fullName>
    <formula>DATEVALUE(Trigger_DateTime__c  )</formula>
    <label>Trigger Date</label>
    <type>Date</type>
</CustomField>