force-app/main/default/objects/Notification__c/fields/Trigger_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Trigger_DateTime__c</fullName>
    <description>Field to store the triggering date time of email</description>
    <label>Trigger DateTime</label>
    <type>DateTime</type>
</CustomField>